
4.x.y (YYYY-MM-DD)
  - Show an error when the user tries to compute orbits of objects for
    which no ChooseHashFunction method is available. Previously, it would
    fall back to a "trivial" hash function, which lead to worst-case
    performance.
  - Require GAP >= 4.6
  - Remove Jenkins hash in favor of the Murmur hash built into GAP
  - Clarify that the code is licensed under GPL v3.

4.7.3 (2014-11-08)
  - Tweak the build system to avoid potential issues when the source
    code gets repackages by third parties (e.g. by the GAP team, when
    creating their big package archives)
  - Fix a missing variable initialization, which could cause Enumerate
    (and hence anything using it, such as FindShortGeneratorsOfSubgroup)
    to run into an error.

4.7.2 (2014-09-24)
  - Fix error in Memory() method for orbit-by-suborbit setup objects.
  - Update Max Neunhoeffer's contact data
  - Use AutoDoc to generate title page of the manual from PackageInfo.g
  - Add Max Horn as a maintainer

4.7.1 (2014-04-04)
  - Previous release had an invalid release date in
    PackageInfo.g (2014-04-31 instead of 2014-03-31).
  - Merge HISTORY and CHANGES files.

4.7 (2014-03-31)
  - Use hash functions for transformations and partial permutations
    provided by newer GAP versions instead of our own. This way,
    if the internal representation for these objects changes
    (as has recently happened), we stay compatible (see issue #3).
  - Fix bug were orb logs were not properly updated if the enumeration
    stopped early (see issues #4 and #5).
  - Fix bug caused by orbits with seeds (see issue #5).
  - Update and tweak the package build system.
  - Move package repository and website to GitHub.

4.6 (2013-05-02)
  - Fix a one by off bug in FuncMappingPermListList reported by Max Horn.
  - Withdraw C versions of PermLeftQuoTransformationNC,
    ImageAndKernelOfTransformation, CanonicalTransSameKernel and
    IsInjectiveTransOnList